match fixture added

--- a/badmintonTournament.html
+++ b/badmintonTournament.html
@@ -138,21 +138,21 @@
                 let data = [
                     {
                         "name": "Atiqul",
-                        "played":1,
+                        "played":2,
                         "win":0,
-                        "loose":1,
-                        "totalPoint":10,
+                        "loose":2,
+                        "totalPoint":28,
                         "point":0,
-                        "pointHistory": "10",
+                        "pointHistory": "10 + 18",
                     },
                     {
                         "name": "Arif",
-                        "played":2,
+                        "played":3,
                         "win":2,
-                        "loose":0,
-                        "totalPoint":40,
+                        "loose":1,
+                        "totalPoint":46,
                         "point":6,
-                        "pointHistory": "20 + 20",
+                        "pointHistory": "20 + 20 + 6",
                     },
                     {
                         "name": "Asif",
@@ -165,11 +165,12 @@
                     },
                     {
                         "name": "Joni",
-                        "played":1,
-                        "win":1,
+                        "played":3,
+                        "win":3,
                         "loose":0,
-                        "totalPoint":20,
-                        "point":3,
+                        "totalPoint":60,
+                        "point":9,
+                        "pointHistory": "20 + 20 + 20",
                     },
                 
                 ];
@@ -190,12 +191,12 @@
                     },
                     {
                         "name": "Jahidul",
-                        "played":2,
+                        "played":3,
                         "win":1,
-                        "loose":1,
-                        "totalPoint":35,
+                        "loose":2,
+                        "totalPoint":43,
                         "point":3,
-                        "pointHistory": "20 + 15",
+                        "pointHistory": "20 + 15 + 8",
                     },
                     {
                         "name": "Hujur",
@@ -207,11 +208,12 @@
                     },
                     {
                         "name": "Shakil",
-                        "played":1,
-                        "win":1,
+                        "played":2,
+                        "win":2,
                         "loose":0,
-                        "totalPoint":20,
-                        "point":3,
+                        "totalPoint":40,
+                        "point":6,
+                        "pointHistory": "20 + 20 +",
                     },
                 
                 ];
@@ -232,21 +234,21 @@
                     },
                     {
                         "name": "Rajib",
-                        "played":2,
-                        "win":1,
+                        "played":3,
+                        "win":3,
                         "loose":1,
-                        "totalPoint":36,
-                        "point":3,
-                        "pointHistory": "16 + 20",
+                        "totalPoint":56,
+                        "point":6,
+                        "pointHistory": "16 + 20 + 20",
                     },
                     {
                         "name": "Lotif",
-                        "played":2,
+                        "played":3,
                         "win":1,
-                        "loose":1,
-                        "totalPoint":38,
+                        "loose":2,
+                        "totalPoint":56,
                         "point":3,
-                        "pointHistory": "18 + 20",
+                        "pointHistory": "18 + 20 + 18",
                     },
                     {
                         "name": "Tariqul",
