after first round

--- a/badmintonTournament.html
+++ b/badmintonTournament.html
@@ -138,12 +138,12 @@
                 let data = [
                     {
                         "name": "Atiqul",
-                        "played":2,
-                        "win":0,
+                        "played":3,
+                        "win":1,
                         "loose":2,
-                        "totalPoint":28,
-                        "point":0,
-                        "pointHistory": "10 + 18",
+                        "totalPoint":48,
+                        "point":3,
+                        "pointHistory": "10 + 18 + 20",
                     },
                     {
                         "name": "Arif",
@@ -156,12 +156,12 @@
                     },
                     {
                         "name": "Asif",
-                        "played":2,
+                        "played":3,
                         "win":0,
-                        "loose":2,
-                        "totalPoint":27,
+                        "loose":3,
+                        "totalPoint":45,
                         "point":0,
-                        "pointHistory": "9 + 18",
+                        "pointHistory": "9 + 18 + 18",
                     },
                     {
                         "name": "Joni",
@@ -182,12 +182,12 @@
                 let data = [
                     {
                         "name": "Shamim(2)",
-                        "played":1,
-                        "win":1,
+                        "played":3,
+                        "win":3,
                         "loose":0,
-                        "totalPoint":20,
-                        "point":3,
-                        "pointHistory": "20 +",
+                        "totalPoint":60,
+                        "point":9,
+                        "pointHistory": "20 + 20 + 20",
                     },
                     {
                         "name": "Jahidul",
@@ -200,20 +200,21 @@
                     },
                     {
                         "name": "Hujur",
-                        "played":2,
+                        "played":3,
                         "win":0,
-                        "loose":2,
-                        "totalPoint":24,
+                        "loose":3,
+                        "totalPoint":41,
                         "point":0,
+                        "pointHistory": "15 + 9 + 17",
                     },
                     {
                         "name": "Shakil",
-                        "played":2,
+                        "played":3,
                         "win":2,
-                        "loose":0,
-                        "totalPoint":40,
+                        "loose":1,
+                        "totalPoint":52,
                         "point":6,
-                        "pointHistory": "20 + 20 +",
+                        "pointHistory": "20 + 20 + 12",
                     },
                 
                 ];
@@ -225,17 +226,17 @@
                 let data = [
                     {
                         "name": "Rubel",
-                        "played":2,
-                        "win":1,
+                        "played":3,
+                        "win":2,
                         "loose":1,
-                        "totalPoint":34,
-                        "point":3,
-                        "pointHistory": "20 + 14",
+                        "totalPoint":54,
+                        "point":6,
+                        "pointHistory": "20 + 14 + 20",
                     },
                     {
                         "name": "Rajib",
                         "played":3,
-                        "win":3,
+                        "win":2,
                         "loose":1,
                         "totalPoint":56,
                         "point":6,
@@ -252,12 +253,12 @@
                     },
                     {
                         "name": "Tariqul",
-                        "played":2,
+                        "played":3,
                         "win":1,
-                        "loose":1,
-                        "totalPoint":34,
+                        "loose":3,
+                        "totalPoint":52,
                         "point":3,
-                        "pointHistory": "20 + 14",
+                        "pointHistory": "20 + 14 + 18",
                     },
                 
                 ];
